# proc-macro-workshop

bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 01-parse.rs  07-repeated-field.rs  08-unrecognized-attribute.stderr
debug/: Cargo.toml
debug/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 06-pattern-path.stderr
utils/: Cargo.toml
utils/src/: lib.rs
