[package]
name = "bitfield"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[[test]]
name = "test"
path = "tests/01-specifier-types.rs"
#path = "tests/02-storage.rs"
#path = "tests/03-accessors.rs"
#path = "tests/04-multiple-of-8bits.rs"
#path = "tests/04-multiple-of-8bits.stderr"
#path = "tests/05-accessor-signatures.rs"
#path = "tests/06-enums.rs"
#path = "tests/07-optional-discriminant.rs"
#path = "tests/08-non-power-of-two.rs"
#path = "tests/08-non-power-of-two.stderr"
#path = "tests/09-variant-out-of-range.rs"
#path = "tests/09-variant-out-of-range.stderr"
#path = "tests/10-bits-attribute.rs"
#path = "tests/11-bits-attribute-wrong.rs"
#path = "tests/11-bits-attribute-wrong.stderr"
#path = "tests/12-accessors-edge.rs"


[[test]]
name = "progress"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
