[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
#path = "tests/01-parse.rs"
#path = "tests/02-create-builder.rs"
#path = "tests/03-call-setters.rs"
#path = "tests/04-call-build.rs"
#path = "tests/05-method-chaining.rs"
#path = "tests/06-optional-field.rs"
#path = "tests/07-repeated-field.rs"
#path = "tests/08-unrecognized-attribute.rs"
#path = "tests/08-unrecognized-attribute.stderr"
#path = "tests/09-redefined-prelude-types.rs"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = {version="1.0.57",features=["full","fold","parsing", "derive", "extra-traits"]}
quote = "1.0.8"
proc-macro2 = { version = "1.0", features = ["nightly"]}
