[package]
name = "sorted"
version = "0.0.1"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "progress"
path = "tests/progress.rs"

[[test]]
name = "test"
#path = "tests/01-parse-enum.rs"
#path = "tests/02-not-enum.rs"
#path = "tests/02-not-enum.stderr"
#path = "tests/03-out-of-order.rs"
#path = "tests/03-out-of-order.stderr"
#path = "tests/04-variants-with-data.rs"
#path = "tests/04-variants-with-data.stderr"
#path = "tests/05-match-expr.rs"
#path = "tests/05-match-expr.stderr"
#path = "tests/06-pattern-path.rs"
#path = "tests/06-pattern-path.stderr"
#path = "tests/07-unrecognized-pattern.rs"
#path = "tests/07-unrecognized-pattern.stderr"
path = "tests/08-underscore.rs"
#path = "tests/progress.rs"


[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = {version="1.0.89",features=["full","fold","parsing", "derive", "extra-traits", "visit-mut"]}
quote = "1.0.8"
proc-macro2 = { version = "1.0.36", features = ["nightly"]}
